# FanCtrl

./: AGENTS.md  README.md  fanctrl.conf  fanctrl.service  pyproject.toml
debian/: control  rules
src/: AGENTS.md
src/fanctrl/: __init__.py  controller.py
tests/: test_controller.py
